tests/ui/consts/fn_trait_refs.stderr
error[E0635]: unknown feature `const_cmp`
  --> $DIR/fn_trait_refs.rs:8:12
   |
LL | #![feature(const_cmp)]
   |            ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0635`.
